fix: Carbon Gray10 theme has poor contrast for hints
This PR also fixes a few related theming issues.

part of #7956

--- a/plugins/plugin-client-common/web/css/static/ui.css
+++ b/plugins/plugin-client-common/web/css/static/ui.css
@@ -1149,6 +1149,7 @@ body {
   --color-green: var(--color-base0B);
   --color-yellow: var(--color-base0A);
   --color-cyan: var(--color-base0C);
+  --color-light-blue: var(--color-base0D);
   --color-blue: var(--color-base0D);
   --color-magenta: var(--color-base0E);
   --color-white: var(--color-base07);
