--- a/plugins/plugin-core-themes/web/scss/dark.scss
+++ b/plugins/plugin-core-themes/web/scss/dark.scss
@@ -41,6 +41,8 @@ body[kui-theme='Dark'] {
   --color-base0E: #ffa0c2; /* MAGENTA: Keywords, Storage, Selector, Markup Italic, Diff Changed */
   --color-base0F: #d0b0ff; /* BROWN: Deprecated, Opening/Closing Embedded Language Tags, e.g. <?php ?> */
 
+  --color-light-blue: #c8dfff;
+
   --color-base0B-rgb: 61, 187, 97;
   --color-base08-rgb: 251, 75, 83;
 
